# bsp-tri-physics

./: CMakeLists.txt  README.md  bsp-tri-physics.cap  camera.cpp  camera.h  genmapapp.cpp  genmapapp.h  hl1filesystem.cpp  hl1wadasset.cpp  hltypes.h  physicsservice.cpp  physicsservice.hpp  vertexarray.cpp
cmake/: Dependencies.cmake
common/include/: application.h  fontmanager.h  ifont.h  vertexarray.hpp
common/include/glad/: glad_wgl.h
common/src/: application-win32.cpp  fontmanager.cpp  glad_wgl.c
construct/include/: assetmanager.h  camera.h  engine.hpp  entities.hpp  glshader.h  iassetmanager.hpp  iphysicsservice.hpp  irenderer.hpp
construct/include/valve/: hl1filesystem.h  hltypes.h
construct/include/valve/bsp/: hl1wadasset.h
construct/include/valve/mdl/: hl1mdlinstance.h  hl1mdltypes.h
construct/include/valve/spr/: hl1sprasset.h
construct/src/: assetmanager.cpp  camera.cpp  engine.cpp  glbuffer.cpp  glshader.cpp  physicsservice.cpp
construct/src/valve/: hl1filesystem.cpp  hltexture.cpp
construct/src/valve/bsp/: hl1bspasset.cpp  hl1wadasset.cpp
construct/src/valve/mdl/: hl1mdlinstance.cpp
data/maps/: world_01.map  world_01.rmf
game/: CMakeLists.txt
game/include/: application.h
game/src/: application-win32.cpp  console.cpp  console.h  genmapapp.cpp  genmapapp.h  main.cpp
game/src/renderers/opengl/: openglrenderer.cpp  openglrenderer.hpp
include/: application-win32.cpp  application.h  glbuffer.h  glshader.h  iassetmanager.hpp  inputstate.h  iphysicsservice.hpp  irenderer.hpp
include/valve/: hl1filesystem.h
include/valve/bsp/: hl1bspasset.h  hl1bsptypes.h
include/valve/mdl/: hl1mdlasset.h
include/valve/spr/: hl1sprtypes.h
src/: assetmanager.cpp  assetmanager.h  camera.cpp  camera.h  engine.cpp  entitycomponents.h  genmapapp.cpp  genmapapp.h  glbuffer.cpp  glshader.cpp  main.cpp  physicsservice.cpp  vertexarray.cpp
src/renderers/opengl/: openglrenderer.cpp  openglrenderer.hpp
src/valve/: hl1filesystem.cpp  hl1filesystem.h  hltexture.cpp  hltexture.h  hltypes.h
src/valve/bsp/: hl1bspasset.cpp  hl1bspasset.h  hl1wadasset.cpp  hl1wadasset.h
src/valve/mdl/: hl1mdlasset.cpp  hl1mdlasset.h  hl1mdlinstance.cpp  hl1mdlinstance.h
src/valve/spr/: hl1sprasset.cpp  hl1sprasset.h  hl1sprtypes.h
viewer/: CMakeLists.txt
viewer/src/: goldsrcviewerapp.cpp  goldsrcviewerapp.h  main.cpp
viewer/src/renderers/opengl/: openglrenderer.cpp  openglrenderer.hpp
